@@ -10,7 +10,7 @@ trial: rm-trial-test-log
 	@if test -z "$(TRIAL_ENV)"; then 				\
 	    echo "Please set the TRIAL_ENV Makefile variable."; 	\
 	    exit 1; fi
-	$(TRIAL_ENV) $(top_builddir)/misc/flumotion-trial -r select     \
+	$(TRIAL_ENV) $(top_builddir)/common/flumotion-trial -r default  \
 						flumotion.test 2>&1     \
 		| tee trial.test.log;					\
 	if ! test $${PIPESTATUS[0]} -eq 0;				\
@@ -18,7 +18,7 @@ trial: rm-trial-test-log
 		make rm-trial-test-log;					\
 		exit 1;							\
 	fi;								\
-	$(TRIAL_ENV) $(top_builddir)/misc/flumotion-trial -r gtk2	\
+	$(TRIAL_ENV) $(top_builddir)/common/flumotion-trial -r gtk2	\
 						flumotion.test 2>&1     \
 		| tee -a trial.test.log;				\
 	if test $${PIPESTATUS[0]} -eq 0;				\
